--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-geopandas
-shapely
-folium
-plotly
-pandas
-numpy
-seaborn
-scipy
-matplotlib
-requests
+folium==0.14.0
+geopandas==0.12.2
+ipywidgets==8.0.6
+matplotlib==3.7.1
+pandas==2.0.1
+plotly==5.14.1
+numpy1.24.3
+requests==2.28.2
+scipy==1.10.1
+seaborn==0.12.2
+shapely==2.0.1
